added pusher to app/assets/index.html

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Typhon</title>
     <link rel="stylesheet" href="/stylesheets/app.css" type="text/css">
+    <script src="http://js.pusher.com/1.12/pusher.min.js"></script>
     <script src="/javascripts/vendor/common.js"></script>
     <script src="/javascripts/vendor/spine.js"></script>
     <script src="/javascripts/app.js"></script>
